--- a/dojochan/index.html
+++ b/dojochan/index.html
@@ -5,7 +5,7 @@
   <link href="/dojo/dojo/resources/dojo.css" rel="stylesheet" type="text/css" />
   <link href="/css/layout.css" rel="stylesheet" type="text/css" />
   <link href="/css/elements.css" rel="stylesheet" type="text/css" />
-  <script type="text/javascript" src="/dojo/dojo/dojo.js" djConfig="parseOnLoad: true"></script>
+  <script type="text/javascript" src="/dojo/dojo/dojo.js" djConfig="parseOnLoad: true,isDebug: true"></script>
   <script type="text/javascript">
     dojo.require("chan.chan");
   </script>
